RESOLVED FIXED90634
JavaScriptCore doesn't build with recent clang (w/ patch)
https://bugs.webkit.org/show_bug.cgi?id=90634
Summary JavaScriptCore doesn't build with recent clang (w/ patch)
Nuno Lopes
Reported 2012-07-05 14:28:08 PDT
JavaScriptCore doesn't build with recent clang (w/ patch).
Attachments
fix warnings by the new -Wunused-private-field. (22.68 KB, patch)
2012-07-05 14:32 PDT, Nuno Lopes
no flags
fix warnings by the new -Wunused-private-field (take #2) (24.14 KB, patch)
2012-07-05 14:39 PDT, Nuno Lopes
no flags
Nuno Lopes
Comment 1 2012-07-05 14:32:27 PDT
Created attachment 150984 [details] fix warnings by the new -Wunused-private-field.
Nuno Lopes
Comment 2 2012-07-05 14:39:48 PDT
Created attachment 150985 [details] fix warnings by the new -Wunused-private-field (take #2)
WebKit Review Bot
Comment 3 2012-07-06 10:39:37 PDT
Comment on attachment 150985 [details] fix warnings by the new -Wunused-private-field (take #2) Clearing flags on attachment: 150985 Committed r121986: <http://trac.webkit.org/changeset/121986>
WebKit Review Bot
Comment 4 2012-07-06 10:39:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.