Fix build with recent clang. https://bugs.webkit.org/show_bug.cgi?id=90634

Patch by Nuno Lopes <nlopes@apple.com> on 2012-07-06
Reviewed by Oliver Hunt.

* jit/SpecializedThunkJIT.h:
(JSC::SpecializedThunkJIT::SpecializedThunkJIT):
(SpecializedThunkJIT):
* jit/ThunkGenerators.cpp:
(JSC::charCodeAtThunkGenerator):
(JSC::charAtThunkGenerator):
(JSC::fromCharCodeThunkGenerator):
(JSC::sqrtThunkGenerator):
(JSC::floorThunkGenerator):
(JSC::ceilThunkGenerator):
(JSC::roundThunkGenerator):
(JSC::expThunkGenerator):
(JSC::logThunkGenerator):
(JSC::absThunkGenerator):
(JSC::powThunkGenerator):
* parser/ASTBuilder.h:
(JSC::ASTBuilder::createAssignResolve):
(JSC::ASTBuilder::createForLoop):
(JSC::ASTBuilder::createForInLoop):
(JSC::ASTBuilder::makeAssignNode):
(JSC::ASTBuilder::makePrefixNode):
(JSC::ASTBuilder::makePostfixNode):
* parser/NodeConstructors.h:
(JSC::PostfixErrorNode::PostfixErrorNode):
(JSC::PrefixErrorNode::PrefixErrorNode):
(JSC::AssignResolveNode::AssignResolveNode):
(JSC::AssignErrorNode::AssignErrorNode):
(JSC::ForNode::ForNode):
(JSC::ForInNode::ForInNode):
* parser/Nodes.h:
(FunctionCallResolveNode):
(PostfixErrorNode):
(PrefixErrorNode):
(ReadModifyResolveNode):
(AssignResolveNode):
(AssignErrorNode):
(ForNode):
(ForInNode):
* parser/Parser.cpp:
(JSC::::parseVarDeclarationList):
(JSC::::parseForStatement):
* parser/SyntaxChecker.h:
(JSC::SyntaxChecker::createAssignResolve):
(JSC::SyntaxChecker::createForLoop):

Canonical link: https://commits.webkit.org/108543@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121986 268f45cc-cd09-0410-ab3c-d52691b4dbfc